<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >


<ImageView 
android:layout_width="wrap_content" 
android:layout_height="wrap_content" 
android:cropToPadding="true" 
android:id="@+id/RfForAll" 
android:src="@drawable/topscreen" 
android:adjustViewBounds="false"></ImageView>

<TextView android:layout_width="fill_parent" 
android:layout_height="wrap_content" android:text="@string/constituion"/>


<ListView android:id="@+id/ListView01" 
android:layout_width="wrap_content" 
android:layout_height="wrap_content" 
>

</ListView>

<TextView android:id="@+id/TextView01" android:layout_width="wrap_content" android:layout_height="wrap_content" android:clickable="true" android:text="@string/option_1"></TextView>

<TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/TextView02" android:text="@string/option_3"></TextView>
<TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@string/option_4" android:text="@string/option_4"></TextView><TextView android:id="@+id/TextView02" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/option_2"></TextView>
</LinearLayout>
